dark mode completed, responsiveness fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,9 +8,14 @@ html {
   --line-color: #e5e7eb;
 }
 
-/* body {
+html.dark {
+  --line-color: rgba(255, 255, 255, 0.25)
+}
 
-} */
+body {
+  @apply  bg-gray-50 text-gray-950 pt-28 sm:pt-36
+  dark:bg-gray-900 dark:text-gray-50 dark:text-opacity-90
+}
 
 .standard-flex {
   @apply flex items-center justify-center
@@ -26,7 +31,7 @@ main {
 }
 
 section {
-  @apply mb-28 max-w-[40rem] text-center
+  @apply mb-20 sm:mb-28 max-w-[40rem] text-center
   leading-8 scroll-mt-28
 }
 
@@ -37,10 +42,11 @@ section h1 {
 
 section h2 {
   @apply text-3xl font-medium capitalize mb-8
+  dark:text-gray-300
 }
 
 section p {
-  @apply mb-3 text-gray-700
+  @apply mb-3 text-gray-700 dark:text-gray-300
 }
 
 section ul {
@@ -50,23 +56,24 @@ section ul {
 
 section li {
   @apply bg-white border border-black/[0.1]
-  px-5 py-2 rounded-xl hover:bg-gray-100
+  px-5 py-2 rounded-xl 
 }
 
 .divider {
-  @apply bg-gray-200 my-16 h-16 w-1 rounded-full hidden sm:block
+  @apply bg-gray-200 my-16 h-16 w-1 rounded-full hidden
+  sm:block dark:bg-opacity-20
 }
 
 article {
   @apply bg-gray-100 max-w-[40rem] border border-black/5 
   overflow-hidden sm:pr-4 relative text-left sm:h-[20rem]
   mb-3 sm:mb-8 last:mb-0 hover:bg-gray-200 transition
-  rounded-lg
+  rounded-lg dark:bg-gray-700 dark:hover:bg-gray-600
 }
 
 article div {
   @apply flex flex-col pt-4 pb-7 px-5 sm:pt-8 sm:pl-8
-  sm:pr-2 sm:max-w-[50%] h-full 
+  sm:pr-2 sm:max-w-[50%] h-full sm:group-odd:ml-[19rem]
 }
 
 article h3 {
@@ -84,6 +91,11 @@ article ul {
 article ul li {
   @apply bg-black/[0.7] px-3 py-0 text-[0.55rem] text-white
   rounded-full tracking-wider uppercase
+}
+
+.skills {
+  @apply hover:bg-gray-100 dark:bg-gray-700
+  dark:text-white/90 dark:hover:bg-gray-600
 }
 
 /* background styles */
@@ -173,23 +185,30 @@ footer span {
 }
 
 .btn-primary {
- @apply bg-gray-900 hover:bg-gray-950 text-white px-7
+ @apply bg-gray-800 hover:bg-gray-900 text-white px-7
+ dark:bg-gray-900 dark:hover:bg-gray-950
+ active:scale-105
 }
 
 .btn-secondary {
   @apply bg-white text-gray-700 px-7 cursor-pointer
+  dark:bg-white/10 dark:text-white/80  dark:hover:bg-white/20
+  active:scale-105
 }
 
 .btn-icon {
   @apply  bg-white text-2xl text-gray-700 px-4 cursor-pointer
   focus:scale-[1.15] hover:scale-[1.15] hover:text-gray-950
+  dark:bg-white/10 dark:text-white/80 dark:hover:bg-white/20
+  active:scale-105
 }
 
 .btn-submit {
   @apply flex items-center justify-center h-[3rem] w-[8rem] 
-  gap-2 !bg-gray-800 text-white rounded-full
-  outline-none transition-all hover:scale-110 hover:!bg-gray-950
+  gap-2 bg-gray-800 text-white rounded-full
+  outline-none transition-all hover:scale-110 hover:bg-gray-950
   focus:scale-110 active:scale-105 disabled:scale-100 disabled:opacity-65
+  dark:bg-gray-600
 }
 
 .btn-theme {
@@ -203,7 +222,7 @@ footer span {
 /* image styles */
 
 .project-image {
-  @apply absolute top-8 -right-40 w-[28rem] rounded-t-lg
+  @apply absolute hidden sm:block top-8 -right-40 w-[28rem] rounded-t-lg
   shadow-2xl group-odd:right-[initial] group-odd:-left-40
   group-hover:-translate-x-3
   group-hover:translate-y-3 
@@ -217,15 +236,17 @@ footer span {
 /* form styles */
 
 form {
-  @apply mt-10 flex flex-col
+  @apply mt-10 flex flex-col dark:text-black
 }
 
 form input {
   @apply h-14 px-4 rounded-lg border border-black/10
-  outline-gray-900
+  outline-gray-900 dark:bg-white dark:bg-opacity-90 
+  dark:focus:bg-opacity-100 transition-all dark:outline-none
 }
 
 form textarea {
-  @apply h-52 rounded-lg  my-3 border border-black/10 p-4
-  outline-gray-900
+  @apply h-52 rounded-lg my-3 border border-black/10 p-4
+  outline-gray-900  dark:bg-white dark:bg-opacity-90 
+  dark:focus:bg-opacity-100 transition-all dark:outline-none
 }
